<resources>
    <string name="app_name">10 Seconds</string>

    <string name="biometric_prompt_invalid">
        Sorry, your device doesn\'t support biometric authentication or you haven\'t enroll any biometrics (e.g. fingerprints) yet.
    </string>
    <string name="biometric_prompt_title">
        Fingerprint Required
    </string>
    <string name="biometric_prompt_description">
        Please touch your finger on the fingerprint sensor to grant access to your master key.
    </string>

    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>

    <string name="prompt_add_account">
        Press + to add new accounts.
    </string>
    <string name="prompt_require_google_play">
        Sorry, this application is based on Firebase, thus it requires Google Play service to work properly.
    </string>

    <!-- Strings related to main activity -->
    <string name="title_activity_main">10 Seconds</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_avatar">User Avatar</string>
    <string name="nav_header_nickname">Unknown</string>
    <string name="nav_header_email">unknown@somewhere.com</string>
    <string name="nav_title_exit">Exit</string>

    <!-- Strings related to login activity -->
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_login_failed">The username not found or password incorrect</string>

    <!-- Strings related to SafeZone service -->
    <string name="title_safe_zone_service">10s SafeZone</string>
    <string name="description_safe_zone_service">
        This 10s SafeZone service can help you pasting your generated passwords securely to other applications, without worrying about lose sensitive data by using clipboard.\n
        \n
        To paste a password generated by 10s:\n
        - Long press a text field\n
        - A password can only survive 10 seconds, take your time (\'・ω・\')
    </string>
    <string name="prompt_enable_safe_zone_service">
        Please enable the 10s SafeZone service for securely paste the passwords.
    </string>

    <!-- Strings related to add identity dialog -->
    <string name="title_dialog_add_identity">Add Identity</string>
    <string name="action_add_identity">Add</string>
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_passphrase">Passphrase</string>
    <string name="error_invalid_passphrase">Please enter a passphrase longer than 8</string>

    <!-- Strings related to add account dialog -->
    <string name="title_dialog_add_account">Add Account</string>
    <string name="action_add_account">Add</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_domain">Domain</string>
    <string name="prompt_password_length">Password Length</string>
    <string name="subtitle_character_types">Character Types</string>
    <string name="char_type_numbers">Numbers</string>
    <string name="char_type_symbols">Symbols</string>
    <string name="char_type_lower_letters">Lower Letters</string>
    <string name="char_type_upper_letters">Upper Letters</string>
    <string name="error_invalid_password_length">Please enter an integer in (0, 32]</string>

    <!-- Strings related to verify identity dialog -->
    <string name="title_dialog_verify_identity">Verify Identity</string>
    <string name="action_verify_identity">Verify</string>
    <string name="error_verify_failed">Passphrase mismatch</string>

    <!-- Strings related to delete alert dialog -->
    <string name="title_dialog_delete_alert">Warning</string>
    <string name="action_delete">Delete</string>
    <string name="message_dialog_delete_alert">Warning! The deleted passwords are not recoverable, continue?</string>
</resources>
