<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/account_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorInputHintDark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/account_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_light_blue"
                android:hint="@string/prompt_username"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorInputDark"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/colorInputHintDark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/account_domain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_light_blue"
                android:hint="@string/prompt_domain"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_add_account"
                android:imeOptions="actionUnspecified"
                android:inputType="textUri"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorInputDark"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/colorInputHintDark">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/account_password_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_light_blue"
                android:hint="@string/prompt_password_length"
                android:inputType="number|numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:text="16"
                android:textColor="@color/colorInputDark"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/subtitle_character_types"
            android:textColor="@color/colorInputDark"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="24dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/account_char_type_numbers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:text="@string/char_type_numbers"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/account_char_type_lower_letters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:text="@string/char_type_lower_letters"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/account_char_type_symbols"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:text="@string/char_type_symbols"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/account_char_type_upper_letters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:text="@string/char_type_upper_letters"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>