<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_white"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/identity_adding"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/identity_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorInputHintDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/identity_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_light_blue"
                android:hint="@string/prompt_nickname"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorInputDark"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:textColorHint="@color/colorInputHintDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/identity_passphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_light_blue"
                android:hint="@string/prompt_passphrase"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_add_identity"
                android:imeOptions="actionUnspecified"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minLines="1"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:textColor="@color/colorInputDark"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>